# hkl

./: .gitignore  Makefile.am  NEWS  README  configure.ac  hkl-binoculars.pc.in  hkl.h  hkl.h.in
Documentation/figures/: B_a.asy  B_b.asy  Makefile.am  detectors-gnuplot.py  detectors.py  qper_qpar.asy  sirius-m-zoom.gnuplot  sirius-m.gnuplot  sirius-m3-100.gnuplot  sirius-s.gnuplot  sirius.c  sirius.gnuplot  traj_n.gnuplot  zaxis.asy
binoculars/: Makefile.am  binoculars-hkl.c  binoculars.c  cnpy.h  hkl-binoculars-cnpy-private.h  hkl-binoculars-cnpy.c  hkl-binoculars-config-private.h  hkl-binoculars-config.c  hkl-binoculars-detectors-2d.c  hkl-binoculars-geometry.c  hkl-binoculars-hdf5.c  hkl-binoculars-private.h  hkl-binoculars.c  hkl-binoculars.h  readhdf5.c  test.c
binoculars-ng/: Makefile.am  hkl.cabal  hkl.cabal.in  release
binoculars-ng/app/: Main.hs
binoculars-ng/binoculars/: Makefile.am  binoculars-hkl  binoculars-hkl.c  hkl-binoculars-cnpy-private.h  hkl-binoculars-cnpy.c  hkl-binoculars-config-private.h  hkl-binoculars-config.c  hkl-binoculars-detectors-2d-private.h  hkl-binoculars-detectors-2d.c  hkl-binoculars-hdf5.c  hkl-binoculars-io-cnpy.c  hkl-binoculars-io-hdf5.c  hkl-binoculars-io-img.c  hkl-binoculars-io-private.h  hkl-binoculars-private.h  hkl-binoculars.c  hkl-binoculars.h
binoculars-ng/data/: 3d3.ui  bino2esg.py
binoculars-ng/data/test/: Makefile  binoculars-mode.el  config_diffabs_ruche_cirpad.ini  config_ech6eiger.txt  config_geometry_custom.ini  config_grades_local_20231857.ini  config_grades_ruche_20232102.ini  config_map.txt  config_mars_ruche_20232102.ini  config_mars_ruche_rel_flyscan.ini  config_ord05133_110_m1018_32h_Qxyz_Vhkl.ini  config_ord05133_ruche_limit_18KeV.ini  config_ord05133_ruche_uhv_big.ini  config_ord05133_sbsmedv.ini  config_sixs_local.ini  config_sixs_polarisation.ini  config_sixs_ruche_110_m1018_32h_Qxyz_Vhkl.ini  config_sixs_ruche_20231857.ini  config_sixs_ruche_angles.ini  config_sixs_ruche_flymedv.ini  config_sixs_ruche_limits.txt  config_sixs_ruche_medv_noetaa.ini  config_sixs_ruche_qcustom2.ini  config_sixs_ruche_qcustom_sbsuhv.ini  config_sixs_ruche_rigaku.ini  config_sixs_ruche_uhv.ini  config_ssd_sixs_flymedv_v2.txt  test.sh
binoculars-ng/debian/: copyright
binoculars-ng/doc/: TODO.org
binoculars-ng/src/Hkl/: C.hs  DataSource.hs  Detector.hs  Engine.hs  Exception.hs  Geometry.hs  H5.hs  Image.hs  Lattice.hs  MyMatrix.hs  Orphan.hs  Parameter.hs  Pipes.hs  Repa.hs  Types.hs
binoculars-ng/src/Hkl/Binoculars/: Command.hs  Common.hs  Conduit.hs  Config.hs  Pipes.hs  Projections.hs
binoculars-ng/src/Hkl/C/: Binoculars.hsc
binoculars-ng/test/: BinocularsSpec.hs
contrib/cristal/: Makefile.am  little-data.c  todo
contrib/cristal/xrays/: Makefile.am  usage.c  xrays-droplet.c  xrays-droplet.h  xrays-image-dat.c  xrays-image-spe.c  xrays-image-spe.h  xrays-image.c  xrays-image.h  xrays-macros.h
contrib/haskell/: Makefile.am  bootstrap  devel  hkl.cabal
contrib/haskell/app/: Binoculars.hs
contrib/haskell/cbits/: hkl-binoculars.c  hkl-binoculars.h
contrib/haskell/data/: ghkl3.ui  gprof2dot.py  pseudo3.ui
contrib/haskell/data/test/: Makefile  binoculars-mode.el  config_ech6eiger.txt  config_hkl_facet.cfg  config_manip1.cfg  config_manip2.cfg  config_mars_ruche_rel_flyscan.ini  config_ord05133_flymedv.ini  config_ord05133_int32.cfg  config_ord05133_ruche_mars_flyscan.ini  config_ord05133_sbsmedv.ini  config_sdd_local.ini  config_sixs_biggest.ini  config_sixs_ruche_flymedv.ini  config_sixs_ruche_flymedv_2.ini  config_sixs_ruche_flymedv_3.ini  config_sixs_ruche_parsing.ini  config_sixs_ruche_qcustom.ini  config_sixs_ruche_qcustom2_1.ini  config_sixs_ruche_qcustom2_2.ini  config_sixs_ruche_qcustom2_20220739.ini  config_sixs_ruche_qcustom2_3.ini  config_sixs_ruche_qcustom_20220739.ini  config_sixs_ruche_uhv.ini  config_ssd_cristal.ini  config_ssd_cristal_limits.ini  config_ssd_cristal_qparqper.ini  config_ssd_sixs_flymedv.txt  config_ssd_sixs_flymedv_v2.txt  test.sh
contrib/haskell/debian/: changelog  control  gbp.conf  haskell-hkl-utils.install  rules  watch.tmpl
contrib/haskell/doc/: TODO.org
contrib/haskell/src/: Hkl.hs  Paths_hkl.hs  ghkl.hs  hkl.hs  hkl3d.hs  xrd.hs
contrib/haskell/src/Hkl/: Binoculars.hs  C.hsc  Calibration.hs  Conduit.hs  DArray.hs  DataSource.hs  Detector.hs  Diffabs.hs  Edf.hs  Engine.hs  Exception.hs  Flat.hs  Geometry.hs  H5.hs  HKD.hs  Image.hs  Lattice.hs  Nxs.hs  Orphan.hs  Parameter.hs  Pipes.hs  Projects.hs  PyFAI.hs  Python.hs  Repa.hs  Sample.hs  Script.hs  (+6 more)
contrib/haskell/test/: BinocularsSpec.hs
contrib/petra3/: Makefile.am  hkl_calculations.c
gui/: 3d.ui  Makefile.am  ghkl.ui  hkl-gui-3d-gl.c  hkl-gui-3d.c  hkl-gui-3d.h  hkl-gui-macros.h  hkl-gui-pseudoaxes.c  hkl-gui-pseudoaxes.h  hkl-gui.c  hkl-gui.h  pseudo.ui
hkl/api2/: Makefile.am  hkl2.c  hkl2.h
hkl/ccan/: Makefile.am  configurator.c
hkl/ccan/alignof/: alignof.h
hkl/ccan/autodata/: autodata.c  autodata.h
hkl/ccan/check_type/: check_type.h
hkl/ccan/compiler/: compiler.h
hkl/ccan/coroutine/: coroutine.c  coroutine.h
hkl/ccan/darray/: darray.h
hkl/ccan/generator/: generator.c  generator.h
hkl/ccan/list/: list.h
hkl/ccan/ptr_valid/: ptr_valid.c
hkl/ccan/ptrint/: ptrint.h
hkl/ccan/str/: str.h
hkl/ccan/typesafe_cb/: typesafe_cb.h
hkl3d/: Makefile.am  hkl3d.cpp  hkl3d.h
tests/: Makefile.am  hkl-axis-t.c  hkl-bench-t.c  hkl-binoculars-t.c  hkl-detector-t.c  hkl-geometry-t.c  hkl-interval-t.c  hkl-lattice-t.c  hkl-matrix-t.c  hkl-parameter-t.c  hkl-pseudoaxis-e4ch-t.c  hkl-pseudoaxis-e4cv-t.c  hkl-pseudoaxis-e6c-t.c  hkl-pseudoaxis-k4cv-t.c  hkl-pseudoaxis-k6c-t.c  hkl-pseudoaxis-soleil-nanoscopium-robot-t.c  hkl-pseudoaxis-soleil-sirius-kappa-t.c  hkl-pseudoaxis-soleil-sixs-med-t.c  hkl-pseudoaxis-t.c  hkl-pseudoaxis-zaxis-t.c  hkl-quaternion-t.c  hkl-sample-t.c  hkl-source-t.c  hkl-unit-t.c  hkl-vector-t.c  hkl3d-test-t.c  runtests.c
tests/bindings/: Makefile.am  polarisation.py  python.py  sample1.txt  trajectory.py
tests/tap/: Makefile.am  basic.h  hkl-tap.c  hkl-tap.h
(+173 files in other folders)
